# ideendatenbank

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.ephemeral.yml  docker-compose.yml  muster-env.txt  pyproject.toml
.github/workflows/: ci.yml  docker.yml
Wissen/edu-social/: API-REFERENZ.md  package-lock.json  package.json  server.js
Wissen/edu-social/public/: index.html
app/: auth.py  config.py  db.py  edu_sharing.py  routes.py  sync.py
backend/: pyproject.toml
backend/app/: auth.py  backup.py  caches.py  config.py  db.py  edu_sharing.py  main.py  ratelimit.py  routes.py  routes_admin.py  routes_attachments.py  routes_captcha.py  routes_common.py  routes_feedback.py  routes_idea_edit.py  routes_inbox.py  routes_me.py  routes_mod_dashboard.py  routes_moderation.py  routes_ops.py  routes_participation.py  routes_ranking.py  routes_reports.py  routes_settings.py  routes_submit.py  routes_taxonomy.py  routes_topics.py  sync.py
backend/data/: ideendb.sqlite
backend/ideendb_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_attachments.py  test_auth_cache.py  test_auth_coalesce.py  test_auth_gating.py  test_backup.py  test_bootstrap.py  test_bulk_move.py  test_caches.py  test_db_pool.py  test_delete_gating.py  test_health.py  test_idea_detail_cache.py  test_ideas.py  test_inbox_retry.py  test_interactions.py  test_owner_attribution.py  test_ranking.py  test_ratings.py  test_security_headers.py  test_settings.py  test_static_cache.py  test_submit_captcha.py  test_sync_schedule.py  test_taxonomy_admin.py  test_thread_pools.py  test_topic_subtree.py  test_topics_admin.py
deploy/helm/ideendatenbank/: Chart.yaml  README.md  values.yaml
deploy/helm/ideendatenbank/templates/: NOTES.txt  _helpers.tpl  configmap-env.yaml  ingress.yaml  poddisruptionbudget.yaml  secret-env.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
docs/: ARCHITEKTUR-UEBERSICHT.md  ARCHITEKTUR.md  AUTH-OAUTH-SPIKE.md  DEPLOYMENT.md  DOCKER-UPDATE.md  EDU-SHARING-ZUSAMMENSPIEL.md  INSTALL-DOCKER.md  KNOWN-LIMITATIONS.md  LOGO-ASSETS.md  README.md  REVIEW-ERGEBNIS.md  SICHERHEIT-ABHAENGIGKEITEN.md  muster-env.txt
docs/benutzerhandbuch/: 01-einfuehrung.md  02-ideen-stoebern.md  03-idee-einreichen.md  04-mitmachen-bewerten.md  05-konto-profil.md  06-einbinden-webcomponent.md  07-faq.md
docs/moderation/: 01-uebersicht-mod-bereich.md  02-postfach-einsortieren.md  03-herausforderungen-pflegen.md  04-versteckt-meldungen.md  05-backup-restore.md  06-statistik-aktivitaet.md  07-permissions-architektur.md
docs/screenshots/: README.md
frontend/: angular.json  eslint.config.js  karma.conf.js  lint.tmp.txt  ngtest.tmp.txt  package-lock.json  package.json  test.tmp.txt  testout.tmp.txt  testout2.tmp.txt
frontend/public/: embed-demo.html
frontend/public/assets/: README.md
frontend/scripts/: cache-bust.mjs
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: action-format.ts  api.service.spec.ts  api.service.ts  auth.service.ts  format-utils.ts  models.ts  nav-url.spec.ts  theme.service.ts  voting.service.spec.ts  voting.service.ts
frontend/src/app/app-shell/: activity-log.component.ts  app-shell.component.scss  app-shell.component.ts  backup-management.component.ts  comment-thread.component.ts  embed.component.ts  help.component.ts  idea-detail.component.ts  inbox-list.component.ts  legal.component.ts  login-dialog.component.ts  moderation.component.ts  profile.component.ts  public-profile.component.ts  rank-trend.component.ts  ranking.component.ts  reports-list.component.ts  share-dialog.component.ts  share-menu.component.ts  submit-idea.component.ts  sync-diff.component.ts  taxonomy-editor.component.ts  topic-editor.component.ts
frontend/src/app/tile-grid/: tile-grid.component.scss  tile-grid.component.ts
ideendb_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
public/: embed-demo.html
scripts/: BACKUP-GDRIVE.md  add_h3_ideas.py  backup-to-gdrive.ps1  backup-to-gdrive.sh  cleanup_old_attachment_folders.py  consolidate_event_slugs.py  correct_ideas.py  enrich_ideas.py  explore_api.py  extract_idea_content.py  fix_speculated.py  ideen_content.json  restore_speculated.py  set_wwwurls.py  test_childobject.py
src/: styles.scss
src/app/: api.service.spec.ts  api.service.ts  auth.interceptor.ts  models.ts  nav-url.ts  voting.service.spec.ts  voting.service.ts
src/app/app-shell/: app-shell.component.scss  app-shell.component.ts  content-manager.component.ts  mods-list.component.ts  public-profile.component.ts  ranking.component.ts  report-problem-modal.component.ts  stats-dashboard.component.ts  submit-idea.component.ts  taxonomy-editor.component.ts  vote-box.component.ts
src/app/tile-grid/: tile-grid.component.scss  tile-grid.component.ts
tests/: test_attachments.py  test_edit.py  test_moderation.py  test_ratings.py  test_sync_diff.py
